:pushpin: Melhorias nas funcionalidades e template

--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -242,7 +242,7 @@
                             <li class="nav-item">
                                 <a href="{% url 'pendencias' %}" class="nav-link position-relative">
                                     <i class="fas fa-bell fa-lg"></i>
-                                    <span class="notification-badge position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                                    <span class="notification-badge position-absolute top-1 translate-middle p-2 bg-danger border border-light rounded-circle">
                                         <span class="visually-hidden">New alerts</span>
                                     </span>
                                 </a>
