--- a/templates/core/relatorios/home.html
+++ b/templates/core/relatorios/home.html
@@ -28,7 +28,7 @@
                         <div class="mb-3 text-success" style="font-size:2.5rem;"><i class="bi bi-person-lines-fill"></i></div>
                         <h5 class="card-title">Vendas por Usuário</h5>
                         <p class="text-muted text-center">Relatório detalhado de vendas por usuário, incluindo produtos, quantidades, valores e desempenho.</p>
-                        <a href="{% url 'vendas_usuario' %}" class="btn btn-outline-success rounded-pill mt-auto">Gerar Relatório</a>
+                        <a href="{% url 'vendas_usuario' %}" class="btn btn-outline-success rounded-pill mt-auto disabled">Gerar Relatório (Em breve)</a>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                         <div class="mb-3 text-warning" style="font-size:2.5rem;"><i class="bi bi-box-seam"></i></div>
                         <h5 class="card-title">Movimentação de Estoque</h5>
                         <p class="text-muted text-center">Acompanhe entradas, saídas e transferências de produtos no estoque.</p>
-                        <a href="#" class="btn btn-outline-warning rounded-pill mt-auto">Gerar Relatório</a>
+                        <a href="#" class="btn btn-outline-warning rounded-pill mt-auto disabled">Gerar Relatório (Em breve)</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                         <div class="mb-3 text-info" style="font-size:2.5rem;"><i class="bi bi-box-seam"></i></div>
                         <h5 class="card-title">Produto</h5>
                         <p class="text-muted text-center">Acompanhe o valor do seu produto dentro do estoque.</p>
-                        <a href="#" class="btn btn-outline-info rounded-pill mt-auto">Gerar Relatório</a>
+                        <a href="#" class="btn btn-outline-info rounded-pill mt-auto disabled">Gerar Relatório (Em breve)</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,6 @@
         </div>
     </div>
 
-    <!-- Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 {% endblock conteudo %}
